# Education_Costs_Birth_Growth_Forecasting

./: .gitignore  Makefile  README.md  pyproject.toml
artifacts/forecasts/: birth_forecast_2024_2030.csv  education_costs_forecast_2024_2030.csv  education_costs_national_totals.csv  education_costs_total_by_region_year.csv  population_0_19_forecast_2024_2030.csv
artifacts/metrics/: best_models_births.csv  forecast_summary_births.csv  model_comparison_births.csv  model_scores_births.csv
artifacts/metrics/eda/: births_duplicates.csv  births_missing_years.csv  births_outliers.csv  births_summary.csv
configs/: config.yaml
configs/params/: costs.yaml  features.yaml  modeling.yaml
dashboards/: Home.py
dashboards/pages/: 1_EDA.py  2_Model_Comparison.py  3_Forecast_and_Costs.py
docs/: architecture.md  data_dictionary.md  modeling_notes.md
scripts/: backfill_db.py  download_data.py  run_all.sh
src/eduforecast/: __init__.py  cli.py
src/eduforecast/common/: config.py  logging.py  paths.py  utils.py
src/eduforecast/costs/: __init__.py  cost_per_child.py  total_costs.py
src/eduforecast/features/: __init__.py  build_features.py  cohort_pipeline.py
src/eduforecast/forecasting/: __init__.py  ets_models.py  intervals.py  predict_births.py  predict_mortality.py  predict_population.py
src/eduforecast/io/: __init__.py  db.py  readers.py  writers.py
tests/: conftest.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_best_models_registry.py  test_costs.py  test_evaluation.py  test_features.py  test_validation.py
(+23 files in other folders)
